--- a/src/components/dashboard/shared/dataTable/dataTable.scss
+++ b/src/components/dashboard/shared/dataTable/dataTable.scss
@@ -1,27 +1,29 @@
 @import '../../../../styles//variables.scss';
 
-.dataTable{
+.dataTable {
+  height: 70vh;
+  width: 100%;
 
-  .dataGrid{
+  .dataGrid {
     background: white;
     padding: 20px;
 
-    .MuiDataGrid-toolbarContainer{
+    .MuiDataGrid-toolbarContainer {
       flex-direction: row-reverse;
     }
 
-    img{
+    img {
       width: 32px;
       height: 32px;
       border-radius: 50%;
       object-fit: cover;
     }
 
-    .action{
+    .action {
       display: flex;
       gap: 15px;
 
-      img{
+      img {
         width: 20px;
         height: 20px;
         cursor: pointer;
