--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,28 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-color: linear-gradient(180deg, $main-bg, $soft-bg, teal);
+  scrollbar-width: thin;
 }
+
+*::selection {
+  background-color: white;
+  color: $main-bg;
+}
+
+*::-webkit-scrollbar {
+  height: .31rem;
+  width: .625rem;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, $main-bg, $soft-bg, teal);
+}
+
 
 a {
   text-decoration: none;
@@ -27,7 +48,7 @@ a {
   padding: 5px 20px;
   border-right: 2px solid $soft-bg;
 
-  @include lg{
+  @include lg {
     width: max-content;
   }
 }
