--- a/src/components/dashboard/shared/menu/menu.scss
+++ b/src/components/dashboard/shared/menu/menu.scss
@@ -3,6 +3,7 @@
 
 .menu {
   min-height: 80vh;
+  position: relative;
 
   .item {
     display: flex;
@@ -16,7 +17,7 @@
       color: $soft-color;
       text-transform: uppercase;
 
-      @include lg{
+      @include lg {
         display: none;
       }
     }
@@ -32,10 +33,33 @@
         background-color: $soft-bg;
       }
 
-      .listItemTitle{
-        @include lg{
+      .listItemTitle {
+        @include lg {
           display: none;
         }
+      }
+    }
+  }
+
+  .logout {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 16px;
+    width: 100%;
+    position: absolute;
+    bottom: 40px;
+
+    &:hover {
+      background-color: $soft-bg;
+      color: white;
+    }
+
+    .logout-title {
+      @include lg {
+        display: none;
       }
     }
   }
