--- a/src/components/dashboard/pendingLeaveRequest/addLeaveData/addLeaveData.scss
+++ b/src/components/dashboard/pendingLeaveRequest/addLeaveData/addLeaveData.scss
@@ -1,4 +1,5 @@
 @import "../../../../styles/variables.scss";
+@import "../../../../styles/responsive.scss";
 
 .add {
   width: 100vw;
@@ -19,6 +20,11 @@
     position: relative;
     z-index: 999;
 
+    @include sm {
+      margin-top: 300px;
+      width: 90%;
+    }
+
     h1 {
       margin-bottom: 40px;
       font-size: 24px;
@@ -38,12 +44,20 @@
       max-width: 500px;
       justify-content: space-between;
 
+      @include sm {
+        flex-direction: column;
+      }
+
       .item {
         width: 40%;
         display: flex;
         flex-direction: column;
         gap: 10px;
         margin-bottom: 20px;
+
+        @include sm {
+          width: 100%;
+        }
 
         label {
           font-size: 14px;
@@ -56,9 +70,26 @@
           outline: none;
           border: 1px solid $soft-color;
           border-radius: 3px;
+          width: 100%;
+        }
+
+        select {
+          padding: 10px;
+          background-color: transparent;
+          color: white;
+          outline: none;
+          border: 1px solid $soft-color;
+          border-radius: 3px;
+          width: 100%;
+
+          option {
+            color: $main-bg;
+            font-weight: 600;
+          }
         }
       }
-      button {
+
+      input[type='submit'] {
         width: 100%;
         padding: 10px;
         cursor: pointer;
