--- a/src/components/dashboard/pendingLeaveRequest/deleteLeaveData/deleteLeaveData.scss
+++ b/src/components/dashboard/pendingLeaveRequest/deleteLeaveData/deleteLeaveData.scss
@@ -1,7 +1,7 @@
-@import "../../../../../styles/variables.scss";
-@import "../../../../../styles/responsive.scss";
+@import "../../../../styles/variables.scss";
+@import "../../../../styles/responsive.scss";
 
-.add {
+.deleteLeave {
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -19,9 +19,10 @@
     background-color: $main-bg;
     position: relative;
     z-index: 999;
+    max-width: 400px;
 
     @include sm {
-      width: 90%;
+      width: 80%;
     }
 
     h1 {
@@ -30,69 +31,21 @@
       color: $soft-color;
     }
 
-    .close {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      cursor: pointer;
-    }
-
-    form {
+    .buttons{
       display: flex;
-      flex-wrap: wrap;
-      max-width: 500px;
       justify-content: space-between;
+      align-items: center;
 
-      @include sm {
-        flex-direction: column;
-      }
-
-      .item {
+      button{
+        padding: 10px 20px;
         width: 40%;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        margin-bottom: 20px;
-
-        @include sm {
-          width: 100%;
-        }
-
-        label {
-          font-size: 14px;
-        }
-
-        input {
-          padding: 10px;
-          background-color: transparent;
-          color: white;
-          outline: none;
-          border: 1px solid $soft-color;
-          border-radius: 3px;
-          width: 100%;
-        }
-
-        select {
-          padding: 10px;
-          background-color: transparent;
-          color: white;
-          outline: none;
-          border: 1px solid $soft-color;
-          border-radius: 3px;
-          width: 100%;
-
-          option {
-            color: $main-bg;
-            font-weight: 600;
-          }
-        }
       }
 
-      input[type='submit'] {
-        width: 100%;
-        padding: 10px;
-        cursor: pointer;
+      .deleteBtn {
+        background-color: red;
+        color: white;
       }
     }
+
   }
 }
