--- a/src/components/dashboard/employee/regular/deleteRegularEmployee/deleteRegularEmployee.scss
+++ b/src/components/dashboard/employee/regular/deleteRegularEmployee/deleteRegularEmployee.scss
@@ -1,7 +1,7 @@
-@import "../../../../styles/variables.scss";
-@import "../../../../styles/responsive.scss";
+@import "../../../../../styles/variables.scss";
+@import "../../../../../styles/responsive.scss";
 
-.deleteLeave {
+.deleteRegularEmployee {
   width: 100vw;
   height: 100vh;
   position: absolute;
