--- a/src/components/dashboard/employee/regular/addRegularEmployee/addRegularEmployee.scss
+++ b/src/components/dashboard/employee/regular/addRegularEmployee/addRegularEmployee.scss
@@ -1,7 +1,7 @@
 @import "../../../../../styles/variables.scss";
 @import "../../../../../styles/responsive.scss";
 
-.add {
+.addRegularEmployee {
   width: 100vw;
   height: 100vh;
   position: absolute;
