--- a/src/components/dashboard/employee/substitute/addSubstituteEmployee/addSubstituteEmployee.scss
+++ b/src/components/dashboard/employee/substitute/addSubstituteEmployee/addSubstituteEmployee.scss
@@ -70,6 +70,7 @@
           border: 1px solid $soft-color;
           border-radius: 3px;
           width: 100%;
+          text-transform: capitalize;
         }
 
         select {
