--- a/src/components/dashboard/holidays/addHoliday/addHoliday.scss
+++ b/src/components/dashboard/holidays/addHoliday/addHoliday.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/variables.scss";
 @import "../../../../styles/responsive.scss";
 
-.addSubstituteEmployee {
+.addHoliday {
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -71,6 +71,10 @@
           border-radius: 3px;
           width: 100%;
           text-transform: capitalize;
+        }
+
+        input[type='date'] {
+          text-transform: none;
         }
 
         select {
