--- a/src/components/dashboard/pendingLeaveRequest/addLeaveData/addLeaveData.scss
+++ b/src/components/dashboard/pendingLeaveRequest/addLeaveData/addLeaveData.scss
@@ -85,10 +85,12 @@
           border: 1px solid $soft-color;
           border-radius: 3px;
           width: 100%;
+          text-transform: capitalize;
 
           option {
             color: $main-bg;
             font-weight: 600;
+            text-transform: capitalize;
           }
         }
       }
