--- a/src/components/dashboard/pendingLeaveRequest/addLeaveData/addLeaveData.scss
+++ b/src/components/dashboard/pendingLeaveRequest/addLeaveData/addLeaveData.scss
@@ -65,6 +65,16 @@
 
         label {
           font-size: 14px;
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          span {
+            color: orange;
+            font-weight: 600;
+            font-size: 13px;
+            justify-content: center;
+            text-transform: capitalize;
+          }
         }
 
         input {
