--- a/src/components/dashboard/shared/footer/footer.scss
+++ b/src/components/dashboard/shared/footer/footer.scss
@@ -1,9 +1,15 @@
+@import '../../../../styles//variables.scss';
 .footer{
+  position: fixed;
+  bottom: 0;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 30px;
-
+  background-color: $main-bg;
+  width: 100%;
+  
   span{
 
     &:first-child{
