--- a/src/components/dashboard/shared/navbar/navbar.scss
+++ b/src/components/dashboard/shared/navbar/navbar.scss
@@ -13,47 +13,37 @@
     font-weight: bold;
     gap: 10px;
   }
+
   .icons {
     display: flex;
     align-items: center;
     gap: 20px;
 
-    .icon{
-      @include sm{
+    .icon {
+      @include sm {
         display: none;
       }
     }
 
     .notification {
-      position: relative;
+      display: none;
 
-      span {
-        background-color: red;
-        color: white;
-        width: 16px;
-        height: 16px;
-        border-radius: 50%;
-        position: absolute;
-        top: -10px;
-        right: -10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 12px;
+      @include lg {
+        display: block;
       }
     }
+  }
 
-    .user {
-      display: flex;
-      align-items: center;
-      gap: 10px;
+  .user {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 
-      img {
-        width: 26px;
-        height: 26px;
-        border-radius: 50%;
-        object-fit: cover;
-      }
+    img {
+      width: 26px;
+      height: 26px;
+      border-radius: 50%;
+      object-fit: cover;
     }
   }
 }
