--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,6 +27,9 @@
   background: linear-gradient(180deg, $main-bg, $soft-bg, teal);
 }
 
+body {
+  background-color: $main-bg;
+}
 
 a {
   text-decoration: none;
@@ -39,6 +42,8 @@ a {
   color: $main-color;
 }
 
+
+
 .container {
   display: flex;
 }
@@ -47,9 +52,23 @@ a {
   width: 250px;
   padding: 5px 20px;
   border-right: 2px solid $soft-bg;
+  background-color: $main-bg;
 
   @include lg {
-    width: max-content;
+    padding-top: 30px;
+    position: fixed;
+    top: 0;
+    left: -250px;
+    width: 250px;
+    height: 100vh;
+    transition: transform 0.3s ease;
+    z-index: 999;
+  }
+}
+
+.menuContainer.active {
+  @include lg {
+    transform: translateX(250px);
   }
 }
 
@@ -57,4 +76,17 @@ a {
   padding: 5px 20px;
   width: 100%;
   overflow: auto;
+}
+
+.backdrop.active {
+  @include lg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.724);
+  }
 }
