--- a/src/components/dashboard/shared/dataPage/filterByDate/filterByDate.scss
+++ b/src/components/dashboard/shared/dataPage/filterByDate/filterByDate.scss
@@ -60,6 +60,15 @@
 
         label {
           font-size: 14px;
+          display: flex;
+          align-items: center;
+          gap: 5px;
+
+          span {
+            font-size: 13px;
+            font-weight: 300;
+            color: $soft-color;
+          }
         }
 
         input {
