--- a/src/components/dashboard/shared/dataPage/filterByDate/filterByDate.scss
+++ b/src/components/dashboard/shared/dataPage/filterByDate/filterByDate.scss
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: center;
   z-index: 998;
-  
+
   .modal {
     padding: 50px;
     border-radius: 10px;
@@ -94,10 +94,12 @@
           border: 1px solid $soft-color;
           border-radius: 3px;
           width: 100%;
+          text-transform: capitalize;
 
           option {
             color: $main-bg;
             font-weight: 600;
+            text-transform: capitalize;
           }
         }
       }
