--- a/src/components/dashboard/shared/dataPage/data-page.scss
+++ b/src/components/dashboard/shared/dataPage/data-page.scss
@@ -7,22 +7,43 @@
     align-items: center;
     gap: 20px;
     margin-bottom: 20px;
+    justify-content: space-between;
 
-    h2 {
-      text-transform: capitalize;
+    .title-and-filter {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 20px;
 
-      @include md {
-        font-size: 16px;
-      }
+      h2 {
+        text-transform: capitalize;
 
-      @include lg {
-        font-size: 18px;
+        @include md {
+          font-size: 16px;
+        }
+
+        @include lg {
+          font-size: 18px;
+        }
       }
     }
 
     button {
-      padding: 5px;
       cursor: pointer;
+      border-radius: 5px;
+    }
+
+    .pdf-btn {
+      background-color: rgb(255, 0, 0);
+      color: rgb(255, 255, 255);
+      box-shadow: none;
+      padding: 10px 5px;
+      font-weight: 600;
+      
+      &:hover{
+        background-color: rgba(255, 0, 0, 0.8);
+        color: rgba(255, 255, 255, 0.9);
+      }
     }
   }
 }
