--- a/src/components/dashboard/shared/navbar/navbar.scss
+++ b/src/components/dashboard/shared/navbar/navbar.scss
@@ -25,11 +25,12 @@
       }
     }
 
-    .notification {
+    .menu-bar {
       display: none;
 
       @include lg {
         display: block;
+        cursor: pointer;
       }
     }
   }
