--- a/src/components/dashboard/holidays/deleteHoliday/deleteHoliday.scss
+++ b/src/components/dashboard/holidays/deleteHoliday/deleteHoliday.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/variables.scss";
 @import "../../../../styles/responsive.scss";
 
-.deleteSubstitute {
+.deleteHoliday {
   width: 100vw;
   height: 100vh;
   position: absolute;
