--- a/src/components/dashboard/allApprovedLeaves/filter/filter.scss
+++ b/src/components/dashboard/allApprovedLeaves/filter/filter.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/variables.scss";
 @import "../../../../styles/responsive.scss";
 
-.addLeaveRequest {
+.filter {
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -12,10 +12,6 @@
   align-items: center;
   justify-content: center;
   z-index: 998;
-  
-  @include sm {
-    background-color: white;
-  }
 
   .modal {
     padding: 50px;
@@ -25,7 +21,6 @@
     z-index: 999;
 
     @include sm {
-      margin-top: 300px;
       width: 90%;
     }
 
@@ -68,12 +63,11 @@
           display: flex;
           align-items: center;
           gap: 5px;
+
           span {
-            color: orange;
-            font-weight: 600;
             font-size: 13px;
-            justify-content: center;
-            text-transform: capitalize;
+            font-weight: 300;
+            color: $soft-color;
           }
         }
 
@@ -86,6 +80,10 @@
           border-radius: 3px;
           width: 100%;
           text-transform: capitalize;
+        }
+
+        input[type='date'] {
+          text-transform: none;
         }
 
         select {
@@ -104,10 +102,6 @@
             text-transform: capitalize;
           }
         }
-      }
-
-      input[type='date'] {
-       text-transform: none;
       }
 
       input[type='submit'] {
