--- a/src/components/dashboard/allApprovedLeaves/allApprovedLeaves.scss
+++ b/src/components/dashboard/allApprovedLeaves/allApprovedLeaves.scss
@@ -5,24 +5,37 @@
   .info {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 20px;
     margin-bottom: 20px;
 
-    h2 {
-      text-transform: capitalize;
+    .title-and-filter {
+      display: flex;
+      align-items: center;
+      gap: 10px;
 
-      @include md {
-        font-size: 16px;
+      .btn {
+        cursor: pointer;
       }
 
-      @include lg {
-        font-size: 18px;
+      h2 {
+        text-transform: capitalize;
+
+        @include md {
+          font-size: 16px;
+        }
+
+        @include lg {
+          font-size: 18px;
+        }
       }
     }
 
-    button {
-      padding: 5px;
-      cursor: pointer;
+    .leave-days {
+      font-size: 18px;
+      font-weight: 600;
+      color: #fff;
+      margin: 0 20px;
     }
   }
 }
