--- a/src/components/dashboard/allApprovedLeaves/filter/filter.scss
+++ b/src/components/dashboard/allApprovedLeaves/filter/filter.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/variables.scss";
 @import "../../../../styles/responsive.scss";
 
-.filter {
+.approvedLeaveFilter {
   width: 100vw;
   height: 100vh;
   position: absolute;
