--- a/src/components/dashboard/allApprovedLeaves/filter/filter.scss
+++ b/src/components/dashboard/allApprovedLeaves/filter/filter.scss
@@ -13,6 +13,9 @@
   justify-content: center;
   z-index: 998;
 
+  @include sm {
+    background-color: white;
+  }
   .modal {
     padding: 50px;
     border-radius: 10px;
@@ -21,7 +24,7 @@
     z-index: 999;
 
     @include sm {
-      margin-top: 150px;
+      margin-top: 70px;
       width: 90%;
     }
 
