--- a/src/components/dashboard/shared/dataPage/dataTable/customToolbar/customToolbar.scss
+++ b/src/components/dashboard/shared/dataPage/dataTable/customToolbar/customToolbar.scss
@@ -1,16 +1,35 @@
-.print-btn {
-    background-color: rgb(0, 0, 255);
-    color: rgb(255, 255, 255);
-    box-shadow: none;
-    border: none;
-    padding: 5px 10px;
-    font-weight: 600;
-    cursor: pointer;
-    border-radius: 5px;
-    font-size: 16px;
+.btn {
+  color: rgb(255, 255, 255);
+  box-shadow: none;
+  border: none;
+  padding: 5px 10px;
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+}
 
-    &:hover{
-      background-color: rgba(0, 0, 255, 0.8);
-      color: rgba(255, 255, 255, 0.9);
-    }
+.export {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.csv {
+  background-color: rgb(0, 128, 0);
+
+  &:hover {
+    background-color: rgba(0, 128, 0, 0.8);
+    color: rgba(255, 255, 255, 0.9);
   }
+}
+
+.print {
+  background-color: rgb(0, 0, 255);
+
+  &:hover {
+    background-color: rgba(0, 0, 255, 0.8);
+    color: rgba(255, 255, 255, 0.9);
+  }
+}
