--- a/src/components/dashboard/shared/dataPage/dataTable/customToolbar/customToolbar.scss
+++ b/src/components/dashboard/shared/dataPage/dataTable/customToolbar/customToolbar.scss
@@ -16,6 +16,15 @@
   gap: 10px;
 }
 
+.excel {
+  background-color: rgb(255,0,0);
+
+  &:hover {
+    background-color: rgba(255, 0, 0, 0.8);
+    color: rgba(255, 255, 255, 0.9);
+  }
+}
+
 .csv {
   background-color: rgb(0, 128, 0);
 
